useroutput/err.ynl.67.output
ynl.67.c: In function 'main':
ynl.67.c:5:23: error: expected ')' before ';' token
  printf("%d\n", i + 10;
                       ^
ynl.67.c:6:1: error: expected ';' before '}' token
 }
 ^
